--- a/src/MANIFEST.in
+++ b/src/MANIFEST.in
@@ -1,2 +1,8 @@
 include README.md
 include LICENSE.txt
+
+include data/*
+include data/html_default/*
+include data/html_default/files/*
+include data/html_default/files/images/*
+include data/html_default/templates/*
