Minor chances for convenience

--- a/src/MANIFEST.in
+++ b/src/MANIFEST.in
@@ -1,9 +1,7 @@
 include README.md
 include LICENSE.txt
-
-include data/*
-include data/html_default/*
-include data/html_default/files/*
-include data/html_default/files/images/*
-include data/html_default/templates/*
-
+include 'data/*',
+include 'data/html_default/*',
+include 'data/html_default/files/*',
+include 'data/html_default/files/images/*',
+include 'data/html_default/templates/*',
