--- a/packageinfo.jsonc
+++ b/packageinfo.jsonc
@@ -1,5 +1,4 @@
 {
-	"documentation": [],
 	"magic": {
 		"magic": "packageinfo",
 		"version": 2
@@ -22,31 +21,20 @@
 		"license": "Apache2",
 		"name": "jk_testing",
 		"packageClass": "python-module",
-		"version": "0.2022.1.30"
+		"version": "0.2022.6.8"
 	},
-	"repositories": [
-		{
-			"devon_publish": false,
-			"project": "python-module-jk-testing",
-			"type": "github",
-			"user": "jkpubsrc"
-		},
-		{
-			"devon_publish": false,
-			"project": "jk_testing",
-			"type": "pypi"
-		}
-	],
 	"requirements": {
+		"htmlcssjs_packages": [],
 		"python_packages": [
 			"jk_logging",
 			"jk_temporary",
 			"jk_json",
 			"graphviz",
 			"jinja2",
-			"jk_terminal_essentials",
+			"jk_terminal_essentials"
 		],
 		"python_packages_dev": [],
+		"python_packages_recommended": [],
 		"system_apt_packages": []
 	},
 	"source": {
@@ -60,7 +48,7 @@
 		],
 		"packages": [
 			"jk_testing",
-			"jk_testing.utils",
+			"jk_testing.utils"
 		]
 	}
 }
